--- a/para5.html
+++ b/para5.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>practice2</title>
 	</head>
-	<body bgcolor = "#ffe6f2">
+	<body style = "background-color:powderblue;">
 		<a name = "bookmark"></a>
 		<center>
 		<h3 title = "Assignment">Ordered list</h3>
@@ -78,8 +78,99 @@
 		<hr/>
 
 		<h1>Images</h1>
-		<img src = "/home/6CSE1/index.jpeg" border = "5" width = "350" height = "200" align = "center">
+		<img src = "/home/6CSE1/index.jpeg" border = "5" width = "350" height = "200" align = "left">
 		
+		</br></br></br></br></br></br></br></br></br></br></br></br></br><hr/></br>
+		
+		
+		
+
+		<h2>Table 2</h2>
+		<table border = "5" width = 50%  bgcolor = "white" cellpadding="10px" cellSpacing = "10px" align = "center" BGColor = "yellow">
+		<caption align = "bottom">Colspan and Rowspan</caption>
+		<tr>
+		<th>column1 header</th>
+		<th>column2 header</th>
+		<th>column3 header</th>
+		<th>column4 header</th>
+		</tr>
+
+		<tr>
+		<td rowspan = "2">row1, cell1</td>
+		<td>row1, cell2</td>
+		<td>row1, cell3</td>
+		<td rowspan = "3">row1,cell4</td>
+		</tr>
+
+		<tr>		
+		<td>row2, cell2</td>
+		<td>row2, cell3</td>		
+		</tr>
+
+		<tr>		
+		<td colspan = "3">row3, cell1</td>	
+		</tr>
+		</table>
+		<hr/>
+
+		<h2>HTML email tag</h2>
+		<a href  = "mailto:201710100199@presidencyuniversity.in">send email</a>
+		<hr/>
+		
+		<h2>Font Sizes</h2>
+		<font size = "1">Font Size = "1"</font><br/>
+		<font size = "2">Font Size = "2"</font><br/>
+		<font size = "3">Font Size = "3"</font><br/>
+		<font size = "4">Font Size = "4"</font><br/>
+		<font size = "5">Font Size = "5"</font><br/>
+		<font size = "6">Font Size = "6"</font><br/>
+		<font size = "7">Font Size = "7"</font>
+		<hr/>
+
+		<marquee>Once upon a time in Hollywod</marquee>
+		<marquee direction = "right">Troop Zero</marquee>
+		<marquee direction = "up">Up we go</marquee>	
+		<marquee direction = "down">Down we fall</marquee>
+		<hr/>		
+		
+		<h1 style = "color:black;" align = "center"><u>HTML Style Attributes</u></h1>	
+		<h1 style = "color:blue;">this is a heading</h1>
+		<p style = "color:red;">this is a paragraph.</p>
+		<h1 style = "font-family:verdana;">this is verdana font heading</h1>
+		<p style = "font-family:courier;">this is courier font paragraph</p>
+		<h1 style = "font-size:300%;">this is a heading</h1>
+		<p style = "font-size:160%;">this is a paragraph.</p>
+		<h4 style = "text-align:center;">centered heading</h1>
+		<p style = "text-align:center;">centered paragraph</p>
+		<hr/>
+
+		<h1 align = "center"><u>HTML Colors</u></h1>		
+		<h1 style = "background-color:DodgerBlue;">Hello World</h1>
+		<p style = "background-color:Tomato;">Lorem Ipsum</p>	
+		<h1 style = "color:tomato;">Hello World</h1>
+		<h1 style = "color:mediumseagreen;">Hello World</h1>
+		<h1 style = "background-color:rgb(255,99,71);">Hello World</h1>
+		<h1 style = "background-color:#ff6347;">Hello World</h1>
+		<h1 style = "background-color:hsl(9,100%,64%);">Hello World</h1>
+		<h1 style = "background-color:rgba(255,99,71,0.5);">Hello World</h1>
+		<h1 style = "background-color:hsla(9,100%,64%,0.5);">Hello World</h1>
+		<hr/>
+		
+		<h1 align = "center"><u>Image as Link</u></h1>		
+		<a href = "https://github.com/20171cse0025/it_256">
+		<img src = "/home/6CSE1/index.jpeg" alt = "image as link" style = "width:42px;height:42px;border:0;">
+		</a>	
+		<hr/>
+
+		<h1 align = "center"><u>Image Floating</u></h1>
+		<p><img src = "index.jpeg" alt = "cross mark" style = "float:right;width:42px;height:42px;">the image will float to the right 			of the text.</p>
+		<p><img src = "index.jpeg" alt = "cross mark" style = "float:center;width:42px;height:42px;">the image will float to the left 			of the text.</p>
+		
+		<img src = "index.jpeg" usemap = "#workmap">
+		<map name = "workmap">
+		<area shape = "rect" coords = "34,44,370,350" href = "https://www.amazon.com/exec/obidos/external-search/?field-keywords=comput&ie=UTF-8&mode=blended&tag=wwwcanoniccom-20&sourceid=Mozilla-search"></map>
+		
+	
 	</body>
 </html>
 
