--- a/CSS_1.html
+++ b/CSS_1.html
@@ -14,5 +14,10 @@
 	<p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 
 	<p class = "new">Phoenix is the capital of the southwestern U.S. state of Arizona. Known for its year-round sun and warm temperatures, it anchors a sprawling, multicity metropolitan area known as the Valley of the Sun. It's known for high-end spa resorts, Jack Nicklaus–designed golf courses and vibrant nightclubs. Other highlights include the Desert Botanical Garden, displaying cacti and numerous native plants.</p>
+
+	<p class = "new">aslkdjfalksd aslkdflkjasdf asdlkfja;lsjkfd</p>
+
+	<img style = "border:10px dashed black;opacity:0.4;" src = "/home/6CSE1/Downloads/pu.jpg"/>
+	<h1 class = new1>blinding lights</h1>
   </body>
 </html>	
