--- a/CSS_1.html
+++ b/CSS_1.html
@@ -19,5 +19,18 @@
 
 	<img style = "border:10px dashed black;opacity:0.4;" src = "/home/6CSE1/Downloads/pu.jpg"/>
 	<h1 class = new1>blinding lights</h1>
+	<h1 class = new2>auto property</h1>
+	<h1 class = new3>padding and element width</h1>
+
+
+	<ul>	
+	<li>display <span>block</span> property</li>
+	<li>display property</li>
+	<li>display property</li>
+	</ul>
+
+	<h6>John Christopher Depp II (born June 9, 1963) is an <span class = "a">American actor</span>, producer, and musician. He has been nominated for 10 <span class  = "b">Golden Globe Awards, winning one for Best Actor</span> for his performance of the title role in Sweeney Todd: The Demon Barber of Fleet Street (2008), and has been nominated for three <span class = "c">Academy Awards for Best Actor,</span> among other accolades. He is regarded as one of the world's biggest film stars.[1][2]</h6>
+
+	<a href = "google.com">click</a>
   </body>
 </html>	
