--- a/CSS_1.html
+++ b/CSS_1.html
@@ -32,5 +32,7 @@
 	<h6>John Christopher Depp II (born June 9, 1963) is an <span class = "a">American actor</span>, producer, and musician. He has been nominated for 10 <span class  = "b">Golden Globe Awards, winning one for Best Actor</span> for his performance of the title role in Sweeney Todd: The Demon Barber of Fleet Street (2008), and has been nominated for three <span class = "c">Academy Awards for Best Actor,</span> among other accolades. He is regarded as one of the world's biggest film stars.[1][2]</h6>
 
 	<a href = "google.com">click</a>
+
+	<h2>London, the capital of England and the United Kingdom, is a 21st-century city with history stretching back to Roman times. At its centre stand the imposing Houses of Parliament, the iconic ‘Big Ben’ clock tower and Westminster Abbey, site of British monarch coronations.</h2>
   </body>
 </html>	
